<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- ================================== -->
    <!--  SportsFlash Main Messages			-->
    <!-- ================================== -->
    
    <string name="app_name">SportsFlash Android Project</string>
     <string name="no_players">Searching ...</string>
     <string name="menu_MLB_TM">MLB</string>
     <string name="menu_NFL_TM">NFL ... coming soon</string>
     <string name="menu_NBA_TM">NBA ... coming soon</string>
     <string name="menu_NHL_TM">NHL ... coming soon</string>
     <string name="createleague_instructions_1">League Name:</string>
     <string name="createleague_instructions_2">League Description:</string>
     <string name="createteam_instructions_1">Team Name:</string>
     <string name="createteam_instructions_2">Team Description:</string>   
     <string name="createmessage_instructions_1">Message Title:</string>
     <string name="createmessage_instructions_2">Message Description:</string>       
     <string name="team_management">Team Management</string> 
     <string name="home">Home</string> 
     <string name="post_message">Post Message</string> 
     <string name="invitemembers_instructions_1">Invite Members:</string> 
     <string name="player">player:</string> 
     <string name="sportsflash_welcome_message">Welcome to SportsFlash!  Your Sports Fantasy League Mobile Application</string>
     <string name="createleague_cancel">Cancel</string>
     <string name="createleague_ok">OK</string>
     <string name="sportsflash_update">Update</string>
     <string name="sportsflash_standings">Check League Standings</string>
     
    <!-- ================================== -->
    <!--  MLB Instruction Messages			-->
    <!-- ================================== -->
     <string name="menu_view_players">View MLB Roster</string>
     <string name="menu_view_your_league">View your MLB Fantasy League</string>
     <string name="menu_view_your_team">View your MLB Fantasy Team</string>     
     <string name="menu_view_league">Create MLB Fantasy League</string>
     <string name="menu_view_team">Create MLB Fantasy Team</string>
     <string name="mlbPlayerTitle">MLB Player:</string>
     <string name="mlbPlayerHR">Home Runs:</string>
     <string name="mlbPlayerRBI">RBI:</string>
     <string name="mlbPlayerBA">Batting Average:</string>
     <string name="mlbPlayerSaves">Saves:</string>
     <string name="mlbPlayerWins">Wins:</string>
     <string name="mlbPlayerERA">Earned Run Avarage:</string>    
	 <string name="sportsflash_mlb_instruction1">Use MENU to select options</string>
	 <string name="sportsflash_mlb_instruction2">Click image to see gallery</string>      
	 <string name="create_team_firstbase">Select First Baseman</string> 
	 <string name="create_team_secondbase">Select Second Baseman</string> 
	 <string name="create_team_thirdbase">Select Third Baseman</string> 
	 <string name="create_team_shortstop">Select Short Stop</string> 
	 <string name="create_team_pitcher">Select Pitcher</string>
	 <string name="create_team_catcher">Select Catcher</string>
	 <string name="create_team_leftfield">Select Left Field</string>   
	 <string name="create_team_centerfield">Select Center Field</string>
	 <string name="create_team_rightfield">Select Right Field</string>
	 <string name="create_team_dhitter">Select Designated Hitter</string>	 
</resources>
