<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2007 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->

<!--
    Demonstrates a nesting layouts to make a form
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bluegreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical|horizontal"
    android:padding="10dip">

     <!--
          TextView goes on top...
      -->
       <TextView
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
       	   android:text="@string/createteam_instructions_1"/>
        
       
       <EditText android:id="@+id/teamName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/createteam_instructions_2"/>
    
        <EditText android:id="@+id/teamDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>
          
    <!-- 
     	Create list of team players
      -->   
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_firstbase"
    />

    <Spinner android:id="@+id/teamFirstBase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_secondbase"
    />

    <Spinner android:id="@+id/teamSecondBase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_thirdbase"
    />

    <Spinner android:id="@+id/teamThirdBase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />    
		
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_shortstop"
    />

    <Spinner android:id="@+id/teamShortStop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />		
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_pitcher"
    />

    <Spinner android:id="@+id/teamPitcher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_catcher"
    />

    <Spinner android:id="@+id/teamCatcher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_leftfield"
    />

    <Spinner android:id="@+id/teamLeftField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />
      
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_centerfield"
    />

    <Spinner android:id="@+id/teamCenterField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />   
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_rightfield"
    />

    <Spinner android:id="@+id/teamRightField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />         
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/create_team_dhitter"
    />

    <Spinner android:id="@+id/teamDHitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />    
    <!--
        Use a horizontal layout to hold the two buttons.
        This item has layout_gravity="right". This means the whole
        horizontal LinearLayout is right aligned, not the individual
        items within it. The horizontal LinearLayout's width is set to
        wrap_content. (If it was fill_parent it would not have any
        room to slide to the right.)
    -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical|horizontal"
        android:layout_gravity="right" >

        <Button android:id="@+id/teamOkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/createleague_ok" />
            
        <Button android:id="@+id/teamCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createleague_cancel"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>